overflow issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1243,4 +1243,8 @@ media queries
     background: inherit;
     color: inherit;
   }
+  html,
+  body {
+    overflow-x: hidden;
+  }
 }
